# todo-system

./: README.md  STATUS.md  config.example.toml  pyproject.toml
launchd/: com.todo-sync.plist
src/todo_sync/: asana_reader.py  cli.py  config.py  ollama_filter.py  taskwarrior.py  things_reader.py
src/todo_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ts/: package-lock.json  package.json  todo-sync-ts.sh  tsconfig.json
ts/hooks/: on-exit-sync  on-exit-things-sync
ts/src/: asana-reader.ts  asana-writer.ts  asana.d.ts  cli.ts  config.ts  hook-on-exit.ts  ollama-filter.test.ts  ollama-filter.ts  taskwarrior.test.ts  taskwarrior.ts  things-reader.test.ts  things-reader.ts  things-writer.ts  types.ts
